AddressTextControl.cpp: Fix ordered comparison between pointer and zero.

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

ticket : #13598